--- a/settings.html
+++ b/settings.html
@@ -9,6 +9,8 @@
 		<link href="css/bootstrap.css" rel="stylesheet" />
 		<link href="css/style.css" rel="stylesheet" />
 		<link href="css/jquery.ptTimeSelect.css" rel="stylesheet" />
+		<link href="css/bootstrap-glyphicons.css" rel="stylesheet" />
+		
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/highstock.js"></script>
 		<script type="text/javascript" src="js/jquery.ptTimeSelect.js"></script>
@@ -67,12 +69,13 @@
 									<option>5</option>
 								</select>
 							</div>
-							<button type="submit" class="btn btn-primary">
+							<button type="submit" class="btn btn-success">
 								Save
 							</button>
 						</fieldset>
 					</form>
-					<br/><br/>
+					<br/>
+					<br/>
 					<form>
 						<fieldset>
 							<legend>
@@ -80,21 +83,23 @@
 							</legend>
 							<div class="form-group">
 								<label for="title">Schedule Name</label>
-								<input type="text" id="title" name="title" />
+								<input type="text" id="title" name="title" class="form-control" />
 							</div>
 							<div class="form-group">
-								<label for="exampleInputFile">Upload Schedule</label>
+								<label for="exampleInputFile">File</label>
 								<input type="file" id="exampleInputFile">
 								<p class="help-block">
 									Upload an existing CSV schedule. Note incorrectly formatted schedules may cause unexpected behaviour.
 								</p>
 							</div>
 							<button type="submit" class="btn btn-default">
-								Submit
+								Upload
 							</button>
 						</fieldset>
 					</form>
-					<br/><br/>
+					<br/>
+					<br/>
+					<!--
 					<form>
 						<fieldset>
 							<legend>
@@ -109,7 +114,7 @@
 									<hr/>
 								</li>
 							</ul>
-							<div class="addNew">
+							<div class="addNsew">
 								<div class="inputs">
 									<label for="time">Time</label>
 									<input type="text" name="time" class="schTime" />
@@ -122,40 +127,91 @@
 								</button>
 							</div>
 						</fieldset>
+					</form> -->
+					<form class="form-horizontal">
+						<legend>
+							Create Schedule
+						</legend>
+						<div class="form-group">
+							<div class="col-lg-10">
+								<label for="schName" class="col-lg-2 control-label">Name</label>
+								<input type="text" name="name" class="form-control" id="schName" placeholder="Name">
+							</div>
+							<div class="col-lg-2">
+								<label for="manualSetPH" class="col-lg-2 control-label">&nbsp;</label>
+								<button type="button" class="btn btn-success" id="manualSetPH">
+									Save
+								</button>
+							</div>
+						</div>
+						<table class="table" id="scheduleTable">
+							<thead>
+								<tr>
+									<th>Time</th>
+									<th>Temperature</th>
+									<th>pH</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr></tr>
+							</tbody>
+						</table>
+						<div class="form-group">
+							<div class="col-lg-4">
+								<label for="inputEmail" class="col-lg-2 control-label">Time</label>
+								<input type="text" name="time" class="form-control" id="schTime" placeholder="Time" val="">
+							</div>
+							<div class="col-lg-4">
+								<label for="inputEmail" class="col-lg-2 control-label">Temperature</label>
+								<input type="text" class="form-control" id="schTemp" placeholder="Temperature" val="">
+							</div>
+							<div class="col-lg-4">
+								<label for="inputPassword" class="col-lg-2 control-label">pH</label>
+								<input type="text" class="form-control" id="schPH" placeholder="pH" val="">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-lg-2">
+								<button type="button" class="btn btn-primary" id="schedAddButton">
+									Add
+								</button>
+							</div>
+						</div>
+						
 					</form>
 					<br/>
 					<br/>
 				</div>
 				<div class="col-lg-6">
-					
 					<form class="form-horizontal">
 						<legend>
 							Manual Setpoint Control
 						</legend>
 						<div class="form-group">
-							<label for="inputEmail" class="col-lg-2 control-label">Temperature</label>
+							<label for="tempManual" class="col-lg-2 control-label">Temperature</label>
 							<div class="col-lg-8">
 								<input type="text" class="form-control" id="tempManual" placeholder="Temperature">
 							</div>
 							<div class="col-lg-2">
-								<button type="button" class="btn btn-primary" id="manualSetTemp">
+								<button type="button" class="btn btn-success" id="manualSetTemp">
 									Save
 								</button>
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="inputPassword" class="col-lg-2 control-label">pH</label>
+							<label for="phManual" class="col-lg-2 control-label">pH</label>
 							<div class="col-lg-8">
 								<input type="text" class="form-control" id="phManual" placeholder="pH">
 							</div>
 							<div class="col-lg-2">
-								<button type="button" class="btn btn-primary" id="manualSetPH">
+								<button type="button" class="btn btn-success" id="manualSetPH">
 									Save
 								</button>
 							</div>
 						</div>
 					</form>
-					<form>
+					<!--<form>
 						<fieldset>
 							<legend>
 								Temperature Control Paramaters
@@ -185,7 +241,7 @@
 							Set
 						</button>
 						<hr/>
-					</form>
+					</form>-->
 					<form>
 						<fieldset>
 							<legend>
