--- a/settings.html
+++ b/settings.html
@@ -144,19 +144,6 @@
 								</button>
 							</div>
 						</div>
-						<table class="table" id="scheduleTable">
-							<thead>
-								<tr>
-									<th>Time</th>
-									<th>Temperature</th>
-									<th>pH</th>
-									<th></th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr></tr>
-							</tbody>
-						</table>
 						<div class="form-group">
 							<div class="col-lg-4">
 								<label for="inputEmail" class="col-lg-2 control-label">Time</label>
@@ -178,7 +165,19 @@
 								</button>
 							</div>
 						</div>
-						
+						<table class="table" id="scheduleTable">
+							<thead>
+								<tr>
+									<th>Time</th>
+									<th>Temperature</th>
+									<th>pH</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr></tr>
+							</tbody>
+						</table>
 					</form>
 					<br/>
 					<br/>
@@ -259,5 +258,6 @@
 				</div>
 			</div>
 		</div><!-- /.container -->
+		<div class="footer"></div>
 	</body>
 </html>
