submit code for turning point parameters

--- a/settings.html
+++ b/settings.html
@@ -237,7 +237,7 @@
 							<div class="form-group">
 								<div class="col-lg-3">
 									<label for="Kp" class="col-lg-2 control-label">Kp</label>
-									<input type="text" name="time" class="form-control" id="Kp" placeholder="Kp" val="">
+									<input type="text" class="form-control" id="Kp" placeholder="Kp" val="">
 								</div>
 								<div class="col-lg-3">
 									<label for="Ki" class="col-lg-2 control-label">Ki</label>
