--- a/settings.html
+++ b/settings.html
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">MARFU</a>
+				<a class="navbar-brand" href="/">MARFU</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li>
@@ -209,14 +209,15 @@
 							</div>
 						</div>
 					</form><br/><br/>
-					<form>
+					<form action="http://poseidon.jcu.edu.au/cgi-bin/params.py" method="post">
 						<fieldset>
 							<legend>
 								Notifications
 							</legend>
 							<div class="form-group">
-								<label for="exampleInputEmail">Email address</label>
-								<input type="text" class="form-control" id="exampleInputEmail" placeholder="Enter email">
+								<label for="inputEmail">Email address</label>
+								<input type="text" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email Address">
+								<input type="hidden" name="type" value="notification"/>
 							</div>
 							<button type="submit" class="btn btn-default">
 								Submit
