set phsetpoint fix

--- a/settings.html
+++ b/settings.html
@@ -137,8 +137,8 @@
 								<input type="text" name="name" class="form-control" id="schName" placeholder="Name">
 							</div>
 							<div class="col-lg-2">
-								<label for="manualSetPH" class="col-lg-2 control-label">&nbsp;</label>
-								<button type="button" class="btn btn-success" id="manualSetPH">
+								<label for="saveSched" class="col-lg-2 control-label">&nbsp;</label>
+								<button type="button" class="btn btn-success" id="saveSched">
 									Save
 								</button>
 							</div>
