--- a/settings.html
+++ b/settings.html
@@ -75,7 +75,7 @@
 					</form>
 					<br/>
 					<br/>
-					<form>
+					<form enctype="multipart/form-data" method="post" action="http://poseidon.jcu.edu.au/cgi-bin/upload.py">
 						<fieldset>
 							<legend>
 								Upload Schedule
@@ -85,8 +85,8 @@
 								<input type="text" id="title" name="title" class="form-control" />
 							</div>
 							<div class="form-group">
-								<label for="exampleInputFile">File</label>
-								<input type="file" id="exampleInputFile">
+								<label for="filename">File</label>
+								<input type="file" id="filename" name="filename">
 								<p class="help-block">
 									Upload an existing CSV schedule. Note incorrectly formatted schedules may cause unexpected behaviour.
 								</p>
