added/removed unused scripts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script type="text/javascript" src="js/jquery.ptTimeSelect.js"></script>
 		<script type="text/javascript" src="js/form.js"></script>
 		<script type="text/javascript" src="js/graphs.js"></script>
+		<script type="text/javascript" src="js/bootstrap.js"></script>
 		<script type="text/javascript">
 			var historyChart;
 
