--- a/settings.html
+++ b/settings.html
@@ -14,11 +14,8 @@
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/jquery.ptTimeSelect.js"></script>
 		<script type="text/javascript" src="js/form.js"></script>
-		<script type="text/javascript" src="js/graphs.js"></script>
-		<script type="text/javascript">
-			var historyChart;
+		<script type="text/javascript" src="js/bootstrap.js"></script>
 
-		</script>
 	</head>
 	<body>
 		<div class="navbar navbar-inverse navbar-fixed-top">
@@ -61,11 +58,7 @@
 							<div class="form-group">
 								<label for="exampleInputFile">Select Schedule</label>
 								<select class="form-control">
-									<option>1</option>
-									<option>2</option>
-									<option>3</option>
-									<option>4</option>
-									<option>5</option>
+									<option>None</option>
 								</select>
 							</div>
 							<button type="submit" class="btn btn-success">
