added schedule selector

--- a/settings.html
+++ b/settings.html
@@ -57,11 +57,11 @@
 							</legend>
 							<div class="form-group">
 								<label for="exampleInputFile">Select Schedule</label>
-								<select class="form-control">
+								<select class="form-control" id="scheduleSelect">
 									<option>None</option>
 								</select>
 							</div>
-							<button type="submit" class="btn btn-success">
+							<button id="setSched" type="submit" class="btn btn-success">
 								Save
 							</button>
 						</fieldset>
