--- a/settings.html
+++ b/settings.html
@@ -61,7 +61,7 @@
 									<option>None</option>
 								</select>
 							</div>
-							<button id="setSched" type="submit" class="btn btn-success">
+							<button id="setSched" type="button" class="btn btn-success">
 								Save
 							</button>
 						</fieldset>
