--- a/index.html
+++ b/index.html
@@ -28,14 +28,11 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">MARFU</a>
+				<a class="navbar-brand">MARFU</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="active">
 							<a href="index.html">Home</a>
-						</li>
-						<li>
-							<a href="history.html">History</a>
 						</li>
 						<li>
 							<a href="settings.html">Settings</a>
