settings page tweaks

--- a/settings.html
+++ b/settings.html
@@ -76,7 +76,7 @@
 							</legend>
 							<div class="form-group">
 								<label for="title">Schedule Name</label>
-								<input type="text" id="title" name="title" class="form-control" />
+								<input type="text" id="title" name="title" class="form-control" placeholder="Schedule Name" />
 							</div>
 							<div class="form-group">
 								<label for="filename">File</label>
@@ -211,6 +211,10 @@
 							<legend>
 								Notifications
 							</legend>
+							<label for="emailNotifications">Current Subscribers</label>
+							<ul id="emailNotifications">
+								
+							</ul>
 							<div class="form-group">
 								<label for="inputEmail">Email address</label>
 								<input type="text" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email Address">
