added email to url

--- a/settings.html
+++ b/settings.html
@@ -220,7 +220,7 @@
 										<th>&nbsp;</th>
 									</tr>
 								</thead>
-								<tbody>s
+								<tbody>
 								</tbody>
 							</table>
 							<div class="form-group">
