--- a/settings.html
+++ b/settings.html
@@ -56,7 +56,7 @@
 								<div class="notification"></div>
 								<label for="exampleInputFile">Select Schedule</label> (Current: <span id="scheduleCurrent"></span>)
 								<select class="form-control" id="scheduleSelect">
-									<option class="selected">None</option>
+									<option>None</option>
 								</select>
 							</div>
 							<button id="setSched" type="button" class="btn btn-success">
