moved buttons below preview and automatically hide preview

--- a/settings.html
+++ b/settings.html
@@ -59,15 +59,16 @@
 									<option>None</option>
 								</select>
 							</div>
+							<div class="scheduleP">
+								<label id="schedulePreviewLabel" for="schedulePreview"></label>
+								<pre id="schedulePreview"></pre>
+							</div>
 							<button id="setSched" type="button" class="btn btn-success">
 								Save
 							</button>
 							<button type="button" class="btn btn-danger" id="deleteSched">
 								Delete
 							</button>
-							<br/>
-							<label id="schedulePreviewLabel" for="schedulePreview"></label>
-							<pre id="schedulePreview"></pre>
 						</fieldset>
 					</form>
 					<br/>
