changed class to id

--- a/settings.html
+++ b/settings.html
@@ -59,7 +59,7 @@
 									<option>None</option>
 								</select>
 							</div>
-							<div class="scheduleP">
+							<div id="scheduleP">
 								<label id="schedulePreviewLabel" for="schedulePreview"></label>
 								<pre id="schedulePreview"></pre>
 							</div>
