added data functions

--- a/settings.html
+++ b/settings.html
@@ -288,6 +288,35 @@
 							</div>
 						</fieldset>
 					</form><br/><br/>
+					<form class="form-horizontal">
+						<fieldset>
+							<legend>Data</legend>
+							<p class="help-block">
+								
+							</p>
+							<div id="dataNotifications"></div>
+							<div class="form-group">
+								<div class="col-lg-4">
+									<label for="turningPoints" class="col-lg-2 control-label">&nbsp;</label>
+									<a href="data/all.txt" type="button" class="btn btn-primary form-control" id="downloadData">
+										Download Data
+									</a>
+								</div>
+								<div class="col-lg-4">
+									<label for="turningPoints" class="col-lg-2 control-label">&nbsp;</label>
+									<a href="/data" type="button" class="btn btn-primary form-control" id="downloadData">
+										Browse Data
+									</a>
+								</div>
+								<div class="col-lg-4">
+									<label for="turningPoints" class="col-lg-2 control-label">&nbsp;</label>
+									<button type="button" class="btn btn-danger form-control" id="deleteData">
+										Purge Data
+									</button>
+								</div>
+							</div>
+						</fieldset>
+					</form><br/><br/>
 					<!--<form>
 						<fieldset>
 							<legend>
