added time warning to calibration dialog

--- a/settings.html
+++ b/settings.html
@@ -333,7 +333,7 @@
 													<h4 class="modal-title">Calibration</h4>
 												</div>
 												<div class="modal-body">
-													<div class="loadImage" style="display:none"><img src="img/loader.gif"/></div>
+													<div class="loadImage" style="display:none"><img src="img/loader.gif"/><br/>Note: calibration can take up to 2 minutes.</div>
 													<div class="alert alert-danger" style="display:none"><strong>Invalid pH</strong> Please insert a number.</div>
 													<div class="instructions">Place the probe in solution <span id="solutionValue">1</span>. Value: <input id="phCalibrateValue" type="text" value="3s" placeholder="pH" /></div>
 													<div class="finish" style="display:none">Calibration Successfully completed!</div>
